# touch-browser

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-POLICY.md  README.md  biome.json  glama.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.json  sonar-project.properties  tsconfig.base.json
benchmarks/: README.md
contracts/: README.md
core/crates/acquisition/: Cargo.toml
core/crates/acquisition/src/: cache.rs  lib.rs  robots.rs  tests.rs
core/crates/action-vm/: Cargo.toml
core/crates/action-vm/src/: lib.rs
core/crates/cli/: ARCHITECTURE.md  Cargo.toml
core/crates/cli/src/: lib.rs  main.rs
core/crates/cli/src/application/: browser_session.rs  browser_session_actions.rs  capture_diagnostics.rs  context.rs  deps.rs  mod.rs  models.rs  policy_support.rs  ports.rs  presentation_support.rs  research_commands.rs  search_support.rs  session_commands.rs  session_reporting.rs
core/crates/cli/src/application/presentation_support/: block_filters.rs  compact_render.rs  layout_zones.rs  markdown_render.rs
core/crates/cli/src/infrastructure/: app_ports.rs  browser_cdp.rs  browser_models.rs  browser_runtime.rs  fixtures.rs  installation.rs  mod.rs  telemetry.rs  verifier.rs
core/crates/cli/src/interface/: agent_contract.rs  browser_session_parser.rs  cli_dispatch.rs  cli_entry.rs  cli_error.rs  cli_models.rs  cli_support.rs  cli_tests.rs  cli_tests_browser_sessions.rs  cli_tests_parsing.rs  cli_tests_read_search.rs  cli_tests_support.rs  command_parser.rs  deps.rs  install_command_parser.rs  mcp_runtime.rs  mod.rs  search_command_parser.rs  serve_runtime.rs  session_command_parser.rs
core/crates/cli/src/interface/cli_tests/: browser_sessions.rs  mod.rs  support.rs
core/crates/cli/src/interface/cli_tests_browser_sessions/: actions.rs  lifecycle.rs  open_extract.rs
core/crates/cli/src/interface/serve_runtime/: daemon_state.rs  interaction_handlers.rs  params.rs  presenters.rs  search_handlers.rs  session_handlers.rs  tab_handlers.rs
core/crates/cli/tests/: cli_streams.rs
core/crates/policy/: Cargo.toml
core/crates/policy/src/: lib.rs
core/crates/runtime/: Cargo.toml
core/crates/runtime/examples/: run_fixture_session.rs  run_memory_session.rs
core/crates/runtime/src/: lib.rs  session_claims.rs  session_extract.rs  session_journal.rs  session_loading.rs  session_navigation.rs  session_replay.rs  session_start.rs  session_synthesis.rs  tests.rs
demo/: README.md  generate-terminal-demo.py
deploy/: Dockerfile  Dockerfile.glama  docker-compose.pilot.yml  touch-browser.env.example
doc/: ADVERSARIAL_BENCHMARK_SPEC.md  AWS_PAGE_TYPE_BENCHMARK_SPEC.md  CLI_SURFACE_SPEC.md  CONTEXT_MAP.md  DDD_COMPLETION_CRITERIA.md  DOC_LINK_INTEGRITY_SPEC.md  EXTERNAL_BASELINE_AND_POSITIONING.md  IMPLEMENTATION_SEQUENCE_AND_TESTING.md  INSTALL_AND_OPERATIONS.md  MCP_BRIDGE_SPEC.md  OPERATIONS_SECURITY_PACKAGE_SPEC.md  PILOT_PACKAGE_SPEC.md  PILOT_TELEMETRY_SPEC.md  PLAYWRIGHT_ADAPTER_SPEC.md  PUBLIC_REFERENCE_WORKFLOW_SPEC.md  PUBLIC_WEB_BENCHMARK_SPEC.md  README.md  REAL_USER_RESEARCH_BENCHMARK_SPEC.md  REFERENCE_WORKFLOW_SPEC.md  RELEASE_READINESS_SPEC.md  SONAR_SAFE_BASELINE.md  STAGED_REFERENCE_WORKFLOW_SPEC.md  TOOL_COMPARISON_BENCHMARK_SPEC.md  UBIQUITOUS_LANGUAGE.md
evals/: package.json  tsconfig.json  vitest.benchmark.config.ts  vitest.config.ts  vitest.gate.config.ts  vitest.proof.config.ts  vitest.shared.ts
examples/: README.md
fixtures/: README.md  fixture-case.schema.json
integrations/: README.md
scripts/: bootstrap-local.sh  build-standalone-bundle.sh  check-architecture-boundaries.mjs  evidence-embedding-runner.mjs  evidence-nli-runner.mjs  example-verifier.mjs  generate-action-surface-regression.mjs  generate-adversarial-benchmark.mjs  generate-aws-page-type-benchmark.mjs  generate-browser-adapter-parity.mjs  generate-browser-observation-metrics.mjs  generate-citation-metrics.mjs  generate-contract-manifest.mjs  generate-customer-fit-economics.mjs  generate-customer-proxy-tasks.mjs  generate-doc-link-integrity.mjs  generate-fixture-evidence.mjs  generate-fixture-snapshots.mjs  generate-js-renderer-benchmark.mjs  generate-latency-cost-metrics.mjs  generate-live-observation-metrics.mjs  generate-mcp-tool-catalog.d.mts  generate-mcp-tool-catalog.mjs  generate-memory-scenario.mjs  generate-observation-metrics.mjs  generate-ops-package-readiness.mjs  generate-policy-scenarios.mjs  generate-public-web-benchmark.mjs  generate-release-readiness.mjs  generate-safety-metrics.mjs  (+16 more)
(+340 files in other folders)
