[workspace]
members = [
  "core/crates/runtime",
  "core/crates/contracts",
  "core/crates/acquisition",
  "core/crates/observation",
  "core/crates/evidence",
  "core/crates/memory",
  "core/crates/policy",
  "core/crates/action-vm",
  "core/crates/storage-sqlite",
  "core/crates/cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MPL-2.0"
version = "0.1.12"

[workspace.dependencies]
ferrous-opencc = "0.3.1"
kuchiki = "0.8.1"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls", "native-tls"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting", "local-offset"] }
tiny_http = "0.12.0"
thiserror = "2.0.17"
url = "2.5.7"

[workspace.metadata.touch-browser]
contracts_dir = "contracts/schemas"
generated_contract_manifest = "contracts/generated/manifest.json"
