[package]
name = "touch-browser-acquisition"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
touch-browser-contracts = { path = "../contracts" }
url.workspace = true

[dev-dependencies]
tiny_http.workspace = true

[lib]
path = "src/lib.rs"
