[package]
name = "touch-browser-policy"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
touch-browser-contracts = { path = "../contracts" }
url.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lib]
path = "src/lib.rs"
